kubernetes/base/iperf/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf
spec:
  type: LoadBalancer
  selector:
    project: iperf
    component: server
  ports:
    - name: iperf
      port: 5001
      #protocol: TCP
      targetPort: 5001
