kubernetes/base/iperf/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iperf
spec:
  defaultBackend:
    service:
      name: iperf
      port:
        name: iperf

  rules:
    - host: iperf.k8s.funkyboy.zone
